--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.root {
+  width: 100vw;
+  height: fit-content;
+}
+
+:root {
+  --color-green: #00897b;
+  --color-light-green: #e4fdf9;
+  --color-black: #000000;
+  --color-white: #ffffff;
+  --color-aqua: #e4fdf9;
+  --color-dark-blue: #3949ab;
+  --color-gray: #bfbfbf;
+  --color-light-gray: #f0f1f1;
 }
