--- a/src/components/MainScreen/MainScreen.css
+++ b/src/components/MainScreen/MainScreen.css
@@ -3,6 +3,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  box-sizing: border-box;
 
   background-image: url("./intro-background-image.png");
   background-size: cover;
@@ -10,7 +11,7 @@
 
   color: var(--color-white);
 
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
