--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -75,3 +75,12 @@
   --button-background-color: var(--color-white);
   --button-border-color: var(--color-white);
 }
+
+.button_theme_transparent-blue {
+  --button-text-color: var(--color-black);
+  --button-border-color: var(--color-white);
+}
+
+.button_theme_transparent-blue:hover {
+  --button-background-color: var(--color-dark-blue);
+}
